<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.quizapp.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        style="@style/background_image"/>

    <TextView
        android:id="@+id/initial_header"
        style="@style/header"
        android:textSize="40sp"
        android:text="@string/app_name_landscape"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/initial_header"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/user_input_view_group"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_weight="5"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/dark_primary_gradient">

                <TextView
                    style="@style/initial_text_view"
                    android:text="@string/user_name" />

                <EditText
                    android:id="@+id/userName"
                    style="@style/initial_edit_text"
                    android:inputType="text"
                    android:hint="@string/user_name"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/dark_primary_gradient"
                android:layout_marginTop="8dp">

                <TextView
                    style="@style/initial_text_view"
                    android:text="@string/user_email" />

                <EditText
                    android:id="@+id/userEmail"
                    android:inputType="textEmailAddress"
                    style="@style/initial_edit_text"
                    android:hint="@string/user_email"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_group"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:background="@drawable/dark_primary_gradient"
            android:gravity="center">

            <Button
                android:id="@+id/easyDifficulty"
                style="@style/initial_button_vertical"
                android:text="@string/easy"
                android:onClick="setEasyQuizParams"/>

            <Button
                android:id="@+id/mediumDifficulty"
                style="@style/initial_button_vertical"
                android:text="@string/medium"
                android:onClick="setMediumQuizParams"/>

            <Button
                android:id="@+id/hardDifficulty"
                style="@style/initial_button_vertical"
                android:text="@string/hard"
                android:onClick="setHardQuizParams"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>